--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
 Django==1.8.7
-django-admin-sortable2
-django_compressor
+Jinja2==2.8
+Pillow==3.2.0
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
+celery==3.1.23
+django-haystack-panel==0.2.1
+django-admin-sortable2==0.6.3
+django-bootstrap3==7.0.1
+django-compressor==2.0
 django-debug-toolbar==1.4
+django-flat-theme==1.1.3
 django-haystack==2.4.1
-django-flat-theme
-django-smart-selects
-django-mptt
+django-mptt==0.8.3
+django-pure-pagination==0.3.0
+django-smart-selects==1.2.2
+django-suit==0.2.18re
 djangorestframework==3.3.1
-jinja2
-mysqlclient
-Pillow
-sorl-thumbnail
+django-allauth==0.25.2
+kombu==3.0.35
+mysqlclient==1.3.7
+pytz==2016.3
+pysolr==3.4.0
+openexchangerates==0.1.1
+sorl-thumbnail==12.3
