--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,13 @@ django-haystack==2.4.1
 django-mptt==0.8.3
 django-pure-pagination==0.3.0
 django-smart-selects==1.2.2
-django-suit==0.2.18re
-djangorestframework==3.3.1
+django-suit==0.2.18
+djangorestframework==3.3.3
 django-allauth==0.25.2
 kombu==3.0.35
 mysqlclient==1.3.7
 pytz==2016.3
 pysolr==3.4.0
 openexchangerates==0.1.1
+simplejson==3.8.2
 sorl-thumbnail==12.3
