--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
-Django==1.8.7
-Jinja2==2.8
-Pillow==3.2.0
 amqp==1.4.9
 anyjson==0.3.3
 billiard==3.3.0.23
 celery==3.1.23
-django-haystack-panel==0.2.1
 django-admin-sortable2==0.6.3
+django-allauth==0.25.2
 django-bootstrap3==7.0.1
 django-compressor==2.0
 django-debug-toolbar==1.4
 django-flat-theme==1.1.3
+django-haystack-panel==0.2.1
 django-haystack==2.4.1
 django-mptt==0.8.3
 django-pure-pagination==0.3.0
 django-smart-selects==1.2.2
 django-suit==0.2.18
+Django==1.8.7
 djangorestframework==3.3.3
-django-allauth==0.25.2
+Jinja2==2.8
 kombu==3.0.35
 mysqlclient==1.3.7
-pytz==2016.3
+Pillow==3.2.0
 pysolr==3.4.0
-openexchangerates==0.1.1
+pytz==2016.3
+requests==2.9.1
 simplejson==3.8.2
 sorl-thumbnail==12.3
