--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ django-suit==0.2.18
 Django==1.9.5
 Jinja2==2.8
 kombu==3.0.35
-mysqlclient==1.3.7
+psycopg2==2.6
 Pillow==3.2.0
 pysolr==3.4.0
 pytz==2016.3
