--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==1.4.9
 anyjson==0.3.3
 billiard==3.3.0.23
+boto3==1.3.1
 celery==3.1.23
 django-admin-sortable2==0.6.3
 django-allauth==0.25.2
@@ -15,6 +16,8 @@ django-mptt==0.8.3
 django-pure-pagination==0.3.0
 django-json-rpc==0.7.2
 django-smart-selects==1.2.2
+#django-storages==1.4.1
+git+https://github.com/syapse/django-storages.git@boto3-new#egg=django-storages
 django-suit==0.2.18
 Django==1.9.5
 Jinja2==2.8
