Added AWS keys to ENV. Fixed issues with collectstatic due to static files dirs.

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 # Add Environment Variables
 
+# AWS keys
+AWS_ACCESS_KEY_ID=AKIAJFAQ5C5BMJLXQMJA
+AWS_SECRET_ACCESS_KEY=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
+
 # Secret Key
 EAP_SECRET_KEY=5(15ds+i2+%ik6z&!yer+ga9m=e%jcqiz_5wszg)r-z!2--b2d
 
