--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ app:
   links:
     - postgres:postgres
     - redis:redis
+    - elasticsearch:elasticsearch
   volumes:
     - ./app:/usr/src/app
     - ./app:/usr/src/app/static
@@ -46,6 +47,12 @@ redis:
     - "6379:6379"
   volumes:
     - redisdata:/data
+
+elasticsearch:
+  image: elasticsearch:2.3.2
+  ports:
+    - "9200:9200"
+    - "9300:9300"
 
 adminer:
   image: clue/adminer
