upgraded to version 2 and renamed some vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,63 @@
-app:
-  # restart: always
-  build: ./app
-  ports:
-    - "8080:8080"
-  links:
-    - postgres:postgres
-    - redis:redis
-    - elasticsearch:elasticsearch
-  volumes:
-    - ./app:/usr/src/app
-    - ./app:/usr/src/app/static
-  env_file: .env
-  environment:
-    DEBUG: 'true'
-  # command: /usr/local/bin/python manage.py runserver 0.0.0.0:8080
-  # command: /usr/local/bin/gunicorn eap.wsgi:application -w 2 -b :8000
+version: '2'
 
-nginx:
-  # restart: always
-  build: ./nginx/
-  ports:
-    - "80:80"
-  volumes:
-    - /www/static
-  volumes_from:
-    - app
-  links:
-    - app:app
 
-postgres:
-  # restart: always
-  image: postgres:9.5.2
-  environment:
-    POSTGRES_USER: "eap"
-    POSTGRES_PASSWORD: "eap"
-    POSTGRES_DB: "eap"
-  ports:
-    - "5432:5432"
-  volumes:
-    - pgdata:/var/lib/postgresql/data/
+services:
+  eap:
+    restart: always
+    container_name: eap
+    build: ./app
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+      - redis
+      - elasticsearch
+    volumes:
+      - ./app:/usr/src/app
+      - ./app:/usr/src/app/static
+    env_file: .env
+    environment:
+      DEBUG: 'true'
+    command: /usr/local/bin/python manage.py runserver 0.0.0.0:8080
 
-redis:
-  # restart: always
-  image: redis:3.0.7
-  ports:
-    - "6379:6379"
-  volumes:
-    - redisdata:/data
+  postgres:
+    restart: always
+    container_name: postgres
+    image: postgres:9.5.2
+    environment:
+      POSTGRES_USER: "eap"
+      POSTGRES_PASSWORD: "eap"
+      POSTGRES_DB: "eap"
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data/
 
-elasticsearch:
-  image: elasticsearch:2.3.2
-  ports:
-    - "9200:9200"
-    - "9300:9300"
+  redis:
+    restart: always
+    container_name: redis
+    image: redis:3.0.7
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
 
-adminer:
-  image: clue/adminer
-  links:
-    - postgres:postgres
-  ports:
-    - "9000:80"
+  elasticsearch:
+    container_name: elasticsearch
+    image: elasticsearch:2.3.2
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+
+  adminer:
+    container_name: adminer
+    image: clue/adminer
+    ports:
+      - "9000:80"
+
+
+volumes:
+  redisdata:
+    driver: local
+  pgdata:
+    driver: local
