--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,14 @@ services:
     ports:
       - "9000:80"
 
+  kibana:
+    container_name: kibana
+    image: kibana:latest
+    environment:
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+
 
 volumes:
   redisdata:
