--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - postgres
       - redis
       - elasticsearch
+      - memcached
     volumes:
       - ./app:/usr/src/app
       - ./app:/usr/src/app/static
@@ -31,6 +32,13 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data/
+
+  memcached:
+    restart: always
+    container_name: memcached
+    image: memcached:1.4.25
+    ports:
+      - "11211:11211"
 
   redis:
     restart: always
