--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -9,6 +9,7 @@ django-bootstrap3==7.0.1
 django-ckeditor==5.0.3
 django-compressor==2.0
 django-debug-toolbar==1.4
+django-elasticsearch-debug-toolbar==1.0.3
 django-flat-theme==1.1.3
 django-mptt==0.8.3
 django-pure-pagination==0.3.0
