--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -22,6 +22,7 @@ elasticsearch-dsl==2.0.0
 gunicorn==19.4.5
 Jinja2==2.8
 kombu==3.0.35
+git+https://github.com/charlesthk/python-mailchimp.git
 psycopg2==2.6
 Pillow==3.2.0
 pysolr==3.4.0
