Adding logic for syncing with MailChimp and our model.

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ EAP_DB_DEFAULT_USER=eap
 EAP_DB_DEFAULT_PASSWORD=eap
 EAP_DB_DEFAULT_HOST=postgres
 EAP_DB_DEFAULT_PORT=5432
+
+# MailChimp
+MAILCHIMP_SECRET_API_KEY=00bfc1610ae83542d0a19103661f7be1-us13
+MAILCHIMP_LIST_NEWSLETTER_ID=dcb971e3e2
