--- a/.env
+++ b/.env
@@ -16,3 +16,7 @@ EAP_DB_DEFAULT_PORT=5432
 # MailChimp
 MAILCHIMP_SECRET_API_KEY=00bfc1610ae83542d0a19103661f7be1-us13
 MAILCHIMP_LIST_NEWSLETTER_ID=dcb971e3e2
+MAILCHIMP_LATEST_NEWS_ID=11bf4257e2
+MAILCHIMP_NEW_PRODUCT_ID=feafcdd19d
+MAILCHIMP_OFFER_ID=f0c956e58a
+
