--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,23 @@ services:
       - memcached
     volumes:
       - ./app:/usr/src/app
-      - ./app:/usr/src/app/static
+      - ./app:/usr/src/app/eap/static
     env_file: .env
     environment:
       DEBUG: 'true'
-    command: /usr/local/bin/python manage.py runserver 0.0.0.0:8080
+    command: /usr/local/bin/gunicorn eap.wsgi:application -b :8080
+
+  nginx:
+    restart: always
+    build: ./nginx/
+    ports:
+      - "8000:80"
+    depends_on:
+      - eap
+    volumes_from:
+      - eap
+    volumes:
+      - /www/static
 
   postgres:
     restart: always
@@ -62,14 +74,6 @@ services:
     image: clue/adminer
     ports:
       - "9000:80"
-
-  kibana:
-    container_name: kibana
-    image: kibana:latest
-    environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
-    ports:
-      - "5601:5601"
 
 
 volumes:
