--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 eap:
   container_name: eap
   build: ./app
+  command: /usr/local/bin/python manage.py runserver 0.0.0.0:8080
+  env_file: .env
   ports:
     - "8080:8080"
   links:
@@ -8,39 +10,22 @@ eap:
     - redis:redis
     - elasticsearch:elasticsearch
     - memcached:memcached
-  volumes:
-    - ./app:/usr/src/app
-    - ./app:/usr/src/app/eap/static
-  env_file: .env
-  environment:
-    DEBUG: 'true'
-  command: /usr/local/bin/gunicorn eap.wsgi:application -b :8080
-
-nginx:
-  restart: always
-  container_name: nginx
-  build: ./nginx/
-  ports:
-    - "8000:80"
-  links:
-    - eap:eap
-  volumes_from:
-    - eap
-  volumes:
-    - /www/static
 
 postgres:
   restart: always
   container_name: postgres
   image: postgres:9.5.2
-  environment:
-    POSTGRES_USER: "eap"
-    POSTGRES_PASSWORD: "eap"
-    POSTGRES_DB: "eap"
+  env_file: .env
   ports:
     - "5432:5432"
-  volumes:
-    - pgdata:/var/lib/postgresql/data/
+
+adminer:
+  restart: always
+  image: clue/adminer
+  links:
+    - postgres
+  ports:
+    - "9000:80"
 
 memcached:
   restart: always
@@ -55,8 +40,6 @@ redis:
   image: redis:3.0.7
   ports:
     - "6379:6379"
-  volumes:
-    - redisdata:/data
 
 elasticsearch:
   restart: always
@@ -65,9 +48,3 @@ elasticsearch:
   ports:
     - "9200:9200"
     - "9300:9300"
-
-adminer:
-  container_name: adminer
-  image: clue/adminer
-  ports:
-    - "9000:80"
